Cleanup PKC rotate. Add initial HMAC rotate.